--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,6 @@
 AllCops:
-  TargetRubyVersion: 2.4
-
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+  TargetRubyVersion: 2.5
+  NewCops: enable
 
 Layout/LineLength:
   Max: 120
